--- a/index.html
+++ b/index.html
@@ -1,181 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unit Kerja 401 - Ultimate Auditor</title>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap');
-    body { font-family: 'Plus Jakarta Sans', sans-serif; transition: all 0.3s ease; }
-    .glass { backdrop-filter: blur(12px); background: rgba(15, 23, 42, 0.8); }
-    .progress-glow { box-shadow: 0 0 20px rgba(59, 130, 246, 0.6); }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unit Kerja 401 - Dolphin Studio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap');
+        body { font-family: 'Plus Jakarta Sans', sans-serif; background: #020617; color: #f8fafc; }
+        .glass { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(16px); border: 1px solid rgba(255,255,255,0.05); }
+        .chart-container { position: relative; height: 140px; width: 140px; margin: 0 auto; }
+        .audit-card:hover { border-color: rgba(59, 130, 246, 0.5); transform: translateY(-2px); transition: all 0.3s; }
+    </style>
 </head>
-<body class="bg-slate-950 text-slate-100">
-  <div id="root"></div>
-
-  <script type="text/babel">
-    const { useState } = React;
-
-    const WebsiteAnalyzer = () => {
-      const [url, setUrl] = useState('');
-      const [loading, setLoading] = useState(false);
-      const [progress, setProgress] = useState(0);
-      const [status, setStatus] = useState('');
-      const [results, setResults] = useState(null);
-      const [isDark, setIsDark] = useState(true);
-
-      const runAnalysis = async () => {
-        if (!url) return alert("Please enter a URL");
-        setLoading(true);
-        setResults(null);
-        setProgress(0);
-
-        // Gimmick Progress
-        const stages = [
-          { p: 20, t: "Fetching Website Data..." },
-          { p: 40, t: "Scanning Security Headers..." },
-          { p: 60, t: "Analyzing GEO Fact Density..." },
-          { p: 80, t: "Gemini AI Brainstorming..." },
-          { p: 95, t: "Finalizing Report..." }
-        ];
-
-        let i = 0;
-        const interval = setInterval(() => {
-          if (i < stages.length) {
-            setProgress(stages[i].p);
-            setStatus(stages[i].t);
-            i++;
-          }
-        }, 800);
-
-        try {
-          const response = await fetch('/api/analyze', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ url })
-          });
-          const data = await response.json();
-          if (data.error) throw new Error(data.error);
-
-          clearInterval(interval);
-          setProgress(100);
-          setResults(data);
-        } catch (err) {
-          clearInterval(interval);
-          alert("Error: " + err.message);
-        } finally {
-          setLoading(false);
-        }
-      };
-
-      return (
-        <div className={`min-h-screen p-6 ${isDark ? 'bg-slate-950 text-white' : 'bg-slate-50 text-slate-900'}`}>
-          <div className="max-w-4xl mx-auto">
-            {/* Header */}
-            <div className="flex justify-between items-center mb-10">
-              <h1 className="text-2xl font-black tracking-tighter text-blue-500 uppercase">Unit Kerja 401</h1>
-              <button onClick={() => setIsDark(!isDark)} className="p-2 rounded-full border border-slate-700">{isDark ? '☀️' : '🌙'}</button>
+<body class="p-4 md:p-8">
+    <div class="max-w-5xl mx-auto">
+        <div class="flex justify-between items-center mb-10">
+            <div class="flex items-center gap-2">
+                <div class="w-8 h-8 bg-blue-600 rounded-lg"></div>
+                <h1 class="text-xl font-extrabold tracking-tighter text-white">UNIT KERJA 401</h1>
             </div>
+            <div class="px-4 py-1 bg-blue-500/10 border border-blue-500/20 rounded-full text-[10px] text-blue-400 font-bold uppercase tracking-widest">
+                Dolphin Studio AI v1.2
+            </div>
+        </div>
 
-            {/* Input Box */}
-            <div className={`${isDark ? 'bg-slate-900 border-slate-800' : 'bg-white border-slate-200'} p-8 rounded-3xl border shadow-2xl mb-8`}>
-              <h2 className="text-xl font-bold mb-4">Analyze Your Digital Identity</h2>
-              <div className="flex flex-col md:flex-row gap-3">
-                <input 
-                  type="text" 
-                  value={url}
-                  onChange={(e) => setUrl(e.target.value)}
-                  placeholder="https://example.com"
-                  className={`flex-1 p-4 rounded-xl outline-none border-2 transition ${isDark ? 'bg-slate-950 border-slate-800 focus:border-blue-500' : 'bg-slate-100 border-slate-200'}`}
-                />
-                <button onClick={runAnalysis} disabled={loading} className="bg-blue-600 hover:bg-blue-700 px-8 py-4 rounded-xl font-bold text-white disabled:opacity-50">
-                  {loading ? 'Analyzing...' : 'Run Audit'}
-                </button>
-              </div>
+        <div class="glass p-10 rounded-[40px] mb-10 shadow-2xl shadow-blue-900/10 text-center">
+            <h2 class="text-4xl font-extrabold mb-2 bg-gradient-to-r from-white to-slate-400 bg-clip-text text-transparent">Analyze Digital Identity</h2>
+            <p class="text-slate-500 mb-8 text-sm">Powered by Gemini 3 Preview & Dolphin Engine</p>
+            <div class="flex flex-col md:flex-row gap-4 max-w-2xl mx-auto">
+                <input type="text" id="urlInput" placeholder="https://uk401.com" class="flex-1 bg-slate-950 border border-slate-800 p-4 rounded-2xl focus:ring-2 focus:ring-blue-600 outline-none transition-all">
+                <button onclick="runAudit()" id="btnAction" class="bg-blue-600 hover:bg-blue-500 px-10 py-4 rounded-2xl font-bold transition-all shadow-lg shadow-blue-600/20">Run Audit</button>
+            </div>
+        </div>
 
-              {loading && (
-                <div className="mt-6">
-                  <div className="flex justify-between text-xs font-bold text-blue-400 mb-2">
-                    <span>{status}</span>
-                    <span>{progress}%</span>
-                  </div>
-                  <div className="h-2 bg-slate-800 rounded-full overflow-hidden">
-                    <div className="h-full bg-blue-500 progress-glow transition-all" style={{width: `${progress}%`}}></div>
-                  </div>
+        <div id="loading" class="hidden text-center py-20">
+            <div class="inline-block animate-spin rounded-full h-12 w-12 border-t-2 border-blue-500 mb-4"></div>
+            <p class="text-slate-400 font-medium">Dolphin AI is being brutally honest about your site...</p>
+        </div>
+
+        <div id="results" class="hidden space-y-8">
+            <div class="glass p-8 rounded-[32px] border-l-4 border-l-red-500">
+                <div class="flex justify-between items-start mb-4">
+                    <h3 class="text-xl font-bold text-white">The Harsh Reality</h3>
+                    <button onclick="downloadPDF()" class="text-xs bg-white/5 hover:bg-white/10 px-4 py-2 rounded-xl transition-all border border-white/10">Export PDF</button>
                 </div>
-              )}
+                <p id="narrativeText" class="text-slate-400 leading-relaxed italic"></p>
             </div>
 
-            {/* Results Display */}
-{results && (
-  <div className="space-y-6 animate-in fade-in duration-500">
-    <div className="grid grid-cols-2 md:grid-cols-4 gap-4">
-      {/* Menggunakan Optional Chaining ?. agar tidak crash jika data belum ada */}
-      {results.categories && Object.entries(results.categories).map(([key, data]) => (
-        <div key={key} className={`${isDark ? 'bg-slate-900 border-slate-800' : 'bg-white border-slate-200'} p-4 rounded-2xl border text-center`}>
-          <span className="text-[10px] uppercase font-black text-slate-500">
-            {key === 'uiux' ? 'UI / UX' : key.toUpperCase()}
-          </span>
-          <p className="text-3xl font-black text-blue-500">{data.score || 0}%</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <div class="glass p-6 rounded-[32px] audit-card">
+                    <div class="chart-container"><canvas id="uiuxChart"></canvas></div>
+                    <h4 class="font-bold mt-4 text-sm text-center">UI/UX & WCAG</h4>
+                    <p id="uiuxDesc" class="text-[11px] text-slate-500 mt-3 leading-tight"></p>
+                </div>
+                <div class="glass p-6 rounded-[32px] audit-card">
+                    <div class="chart-container"><canvas id="seoChart"></canvas></div>
+                    <h4 class="font-bold mt-4 text-sm text-center">SEO Check</h4>
+                    <p id="seoDesc" class="text-[11px] text-slate-500 mt-3 leading-tight"></p>
+                </div>
+                <div class="glass p-6 rounded-[32px] audit-card">
+                    <div class="chart-container"><canvas id="geoChart"></canvas></div>
+                    <h4 class="font-bold mt-4 text-sm text-center">Performance</h4>
+                    <p id="geoDesc" class="text-[11px] text-slate-500 mt-3 leading-tight"></p>
+                </div>
+                <div class="glass p-6 rounded-[32px] audit-card">
+                    <div class="chart-container"><canvas id="securityChart"></canvas></div>
+                    <h4 class="font-bold mt-4 text-sm text-center">Security</h4>
+                    <p id="securityDesc" class="text-[11px] text-slate-500 mt-3 leading-tight"></p>
+                </div>
+            </div>
+
+            <div class="glass p-8 rounded-[32px]">
+                <h3 class="text-sm font-bold mb-4 text-slate-500 uppercase tracking-widest">Tech Stack Detected</h3>
+                <div id="techList" class="flex flex-wrap gap-2"></div>
+            </div>
         </div>
-      ))}
-    </div>
-    
-    {/* Menampilkan Skor Keseluruhan */}
-    <div className={`${isDark ? 'bg-blue-500/10 border-blue-500/20' : 'bg-blue-50 border-blue-200'} p-6 rounded-2xl border text-center`}>
-       <h3 className="text-sm font-bold text-blue-500 uppercase mb-1">Overall Audit Score</h3>
-       <p className="text-5xl font-black text-blue-500">{results.overallScore || 0}</p>
-    </div>
 
-    <div className={`${isDark ? 'bg-slate-900 border-slate-800' : 'bg-white border-slate-200'} p-6 rounded-2xl border`}>
-       <h3 className="font-bold mb-4 flex items-center gap-2">
-         <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
-         Tech Stack Detected
-       </h3>
-       <div className="flex flex-wrap gap-2">
-          {results.techStack?.map(t => (
-            <span key={t} className="px-3 py-1 bg-blue-500/10 text-blue-400 text-xs font-bold rounded-full border border-blue-500/20">
-              {t}
-            </span>
-          ))}
-       </div>
-    </div>
-  </div>
-)}
-
-
-            {/* Footer */}
-            <footer className="mt-20 pt-10 border-t border-slate-800 grid md:grid-cols-2 gap-8 text-xs text-slate-500">
-              <div>
-                <h4 className="font-bold text-blue-500 mb-2">CHANGELOG v1.1.0</h4>
-                <ul className="space-y-1">
-                  <li>• GEO & Security Audit System</li>
-                  <li>• Progress Scanning Gimmick</li>
-                  <li>• Professional Dashboard UI</li>
-                </ul>
-              </div>
-              <div>
-                <p><strong>Concept:</strong> <a href="https://linkedin.com/in/davidhukom" className="text-blue-400">David Hukom</a></p>
-                <p><strong>Developed by:</strong> Claude (AI)</p>
-                <p className="mt-4 p-3 bg-emerald-500/5 rounded-lg border border-emerald-500/10">
-                  Support development: <a href="https://saweria.co/hukomdavid" className="text-emerald-400 font-bold underline">saweria.co/hukomdavid</a>
-                </p>
-              </div>
-            </footer>
-          </div>
+        <div class="mt-20 border-t border-slate-900 pt-10 pb-20">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+                <div>
+                    <h4 class="text-blue-500 font-bold text-xs uppercase tracking-[0.2em] mb-4">Changelog v1.2.0</h4>
+                    <ul class="text-[11px] text-slate-600 space-y-2">
+                        <li>• Rebranded to Dolphin Studio</li>
+                        <li>• Multi-color Charts Integration</li>
+                        <li>• Savage AI Logic Enabled</li>
+                        <li>• WordPress Detection Optimized</li>
+                    </ul>
+                </div>
+                <div class="md:text-right">
+                    <p class="text-xs text-slate-700">Developed by</p>
+                    <p class="text-lg font-black text-blue-600">DOLPHIN STUDIO</p>
+                    <p class="text-[10px] text-slate-800 mt-2">© 2024 Unit Kerja 401. All rights reserved.</p>
+                </div>
+            </div>
         </div>
-      );
-    };
+    </div>
 
-    const root = ReactDOM.createRoot(document.getElementById('root'));
-    root.render(<WebsiteAnalyzer />);
-  </script>
+    <script>
+        let charts = {};
+        function createChart(id, score, color) {
+            const ctx = document.getElementById(id).getContext('2d');
+            if(charts[id]) charts[id].destroy();
+            charts[id] = new Chart(ctx, {
+                type: 'doughnut',
+                data: {
+                    datasets: [{
+                        data: [score, 100-score],
+                        backgroundColor: [color, '#0f172a'],
+                        borderWidth: 0,
+                        borderRadius: 10
+                    }]
+                },
+                options: { cutout: '80%', plugins: { tooltip: { enabled: false } } }
+            });
+        }
+
+        async function runAudit() {
+            const url = document.getElementById('urlInput').value;
+            if(!url) return;
+            
+            document.getElementById('loading').classList.remove('hidden');
+            document.getElementById('results').classList.add('hidden');
+
+            try {
+                const res = await fetch('/api/analyze', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ url })
+                });
+                const data = await res.json();
+
+                document.getElementById('narrativeText').innerText = data.summary;
+                document.getElementById('uiuxDesc').innerText = data.categories.uiux.analysis;
+                document.getElementById('seoDesc').innerText = data.categories.seo.analysis;
+                document.getElementById('geoDesc').innerText = data.categories.geo.analysis;
+                document.getElementById('securityDesc').innerText = data.categories.security.analysis;
+
+                createChart('uiuxChart', data.categories.uiux.score, '#3b82f6');
+                createChart('seoChart', data.categories.seo.score, '#eab308');
+                createChart('geoChart', data.categories.geo.score, '#22c55e');
+                createChart('securityChart', data.categories.security.score, '#ef4444');
+
+                const techList = document.getElementById('techList');
+                techList.innerHTML = '';
+                data.techStack.forEach(t => {
+                    const s = document.createElement('span');
+                    s.className = 'bg-blue-500/5 text-blue-400 border border-blue-500/20 px-3 py-1 rounded-lg text-[10px] font-bold';
+                    s.innerText = t;
+                    techList.appendChild(s);
+                });
+
+                document.getElementById('results').classList.remove('hidden');
+            } catch (e) {
+                alert('Dolphin AI error: ' + e.message);
+            } finally {
+                document.getElementById('loading').classList.add('hidden');
+            }
+        }
+
+        function downloadPDF() {
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
+            doc.setFillColor(2, 6, 23);
+            doc.rect(0, 0, 210, 297, 'F');
+            doc.setTextColor(59, 130, 246);
+            doc.setFontSize(22);
+            doc.text("DOLPHIN AUDIT REPORT", 20, 30);
+            doc.setTextColor(255, 255, 255);
+            doc.setFontSize(10);
+            doc.text("Audit Narrative:", 20, 50);
+            doc.setFontSize(12);
+            doc.text(document.getElementById('narrativeText').innerText, 20, 60, { maxWidth: 170 });
+            doc.save("Dolphin-Audit.pdf");
+        }
+    </script>
 </body>
 </html>
-
